<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fridge</string>
    <string name="menu_settings">Settings</string>
    <string name="fridge_logo">Fridge Logo</string>
    <string name="btn_pantry">Pantry</string>
    <string name="btn_recipes">Recipes</string>
    <string name="btn_suggestions">Suggestions</string>
    <string name="btn_favorites">Favorites</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_categories">RecipeCategories</string>
    <string name="title_activity_pantry_categories">PantryCategories</string>
    <string name="title_activity_pantry">Pantry</string>
    <string name="search_recipe_category">Search Category&#8230;</string>
    <string name="search_recipe">Search Recipe&#8230;</string>
    <string name="search_favorite_recipe">Search Favorite Recipe&#8230;</string>
    <string name="search">Search</string>
    <string name="btn_search">Search Btn</string>
    <string name="tab_ingredients">INGREDIENTS</string>
    <string name="tab_steps">STEPS</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="btn_recommend">Get recommendations</string>
    <string name="update_data">Update Data</string>
    <string name="update_app">Update App</string>
    <string name="limit_data">Limit Data</string>
    <string name="btnSettings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="service_name">Fridge Service</string>

    <string-array name="entry_values">
        <item name="50">50</item>
        <item name="75">75</item>
        <item name="100">100</item>
        <item name="150">150</item>
        <item name="200">200</item>
    </string-array>
    <string-array name="pantry_categories">
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Pork</item>
        <item>Beef</item>
        <item>Spices</item>
        <item>Seasoning</item>
        <item>Liquids</item>
        <item>Others</item>
    </string-array>
    <string-array name="recipe_categories">
        <item>Appetizer</item>
        <item>Main Dish</item>
        <item>Entree</item>
        <item>Salads</item>
        <item>Desserts</item>
        <item>Side Dish</item>
        <item>Soup</item>
        <item>Oriental</item>
    </string-array>

</resources>